# Remitwise-Contracts-1

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  coverage.yml
docs/: api-quickstart.md  architecture.md  authorization.md  backend-integration.md  cli-usage.md  entrypoint-reference.md  error-handling.md  error-reference.md  event-indexing.md  faq.md  gas-and-fees.md  glossary.md  mainnet-checklist.md  math-module.md  release-process.md  testing-guide.md  unit-tests.md  upgrade-strategy.md  versioning.md
docs/adr/: 0002-compile-as-a-cdylib-for-wasm32.md  0003-adopt-no-std-for-the-contract-crate.md  0007-establish-an-event-naming-convention.md  0011-introduce-an-admin-role.md  0019-provide-makefile-build-targets.md  0023-license-the-contract-under-mit.md  0026-prefer-saturating-math-for-aggregates.md  0027-return-result-over-panicking-where-possible.md  0029-source-time-from-the-ledger-timestamp.md  0032-validate-all-entrypoint-inputs.md  0035-emit-events-for-admin-operations.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: error.rs  events.rs  lib.rs  math.rs  storage.rs  test.rs  test_utils.rs  types.rs
